Added Firebase dependencies to Gradle. Configured SHA-1 to Firebase. Fixed theme to use default ActionBar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,19 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
 
+    <!-- Sign in/up form -->
+    <string name="first_name_label_text_view">First Name</string>
+    <string name="last_name_label_text_view">Last Name</string>
     <string name="email_label_text_view">Email</string>
     <string name="password_label_text_view">Password</string>
+    <string name="password_confirm_label_text_view">Confirm password</string>
+    <string name="first_name_hint">First</string>
+    <string name="last_name_hint">Last</string>
     <string name="email_text_field_hint">example@email.com</string>
     <string name="password_text_field_hint">Password</string>
+    <string name="password_confirm_text_field_hint">Confirm Password</string>
     <string name="sign_in_button">Sign In</string>
     <string name="sign_up_account_text_view">Don\'t have an account? Sign up now.</string>
+    <string name="sign_up_create_account_button">Create Account</string>
 
 </resources>
