--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,9 @@
 
     <!-- MainFragment -->
     <string name="eta_button_text">Estimated time arrival...</string>
-    <string name="purchase_ticket_button_text">Purchase Ticket</string>
-    <string name="view_tickets_button_text">View Tickets</string>
+    <string name="purchase_ticket_button_text">Purchase</string>
+    <string name="view_tickets_button_text">View</string>
+    <string name="map_bottom_text">Map?</string>
     <string name="card_type_label">Card type</string>
     <string name="card_type_hint">Visa/Mastercard</string>
     <string name="cardholder_name_label">Cardholder\'s name</string>
