--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="card_cvc_number_label">CVC #</string>
     <string name="card_cvc_number_hint">xxx</string>
     <string name="submit_form_button">Submit</string>
+    <string name="eta_default_text">You have no rides.</string>
+    <string name="test_eta_info">Pickup: San Francisco\nDestination: Palo Alto\n\nYour pod is arriving to your pickup location.\n\nETA: 5 minutes</string>
     
     <string name="ticket_date_label">Date:</string>
     <string name="ticket_time_label">Time:</string>
