--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,10 @@
     <string name="card_cvc_number_hint">xxx</string>
     <string name="submit_form_button">Submit</string>
     <string name="eta_default_text">You have no rides.</string>
-    <string name="test_eta_info">Pickup: San Francisco\nDestination: Palo Alto\n\nYour pod is arriving to your pickup location.\n\nETA: 5 minutes</string>
-    
+    <string name="test_eta_info">Pickup: San Francisco\nDestination: Palo Alto\n\nYour pod is arriving to your pickup locationTextView.\n\nETA: 5 minutes</string>
+
+    <string name="select_station_button_text">Select station</string>
+    <string name="ticket_station_default_value">Select a station</string>
     <string name="ticket_date_label">Date:</string>
     <string name="ticket_time_label">Time:</string>
     <string name="ticket_from_location_label">From:</string>
